; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/adc/extr_stm32-adc-core.c_stm32_adc_remove.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/adc/extr_stm32-adc-core.c_stm32_adc_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.platform_device = type { i32 }
%struct.stm32_adc_common = type { i32 }
%struct.stm32_adc_priv = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.platform_device*)* @stm32_adc_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @stm32_adc_remove(%struct.platform_device* %0) #0 {
  %2 = alloca %struct.platform_device*, align 8
  %3 = alloca %struct.stm32_adc_common*, align 8
  %4 = alloca %struct.stm32_adc_priv*, align 8
  store %struct.platform_device* %0, %struct.platform_device** %2, align 8
  %5 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %6 = call %struct.stm32_adc_common* @platform_get_drvdata(%struct.platform_device* %5)
  store %struct.stm32_adc_common* %6, %struct.stm32_adc_common** %3, align 8
  %7 = load %struct.stm32_adc_common*, %struct.stm32_adc_common** %3, align 8
  %8 = call %struct.stm32_adc_priv* @to_stm32_adc_priv(%struct.stm32_adc_common* %7)
  store %struct.stm32_adc_priv* %8, %struct.stm32_adc_priv** %4, align 8
  %9 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %10 = getelementptr inbounds %struct.platform_device, %struct.platform_device* %9, i32 0, i32 0
  %11 = call i32 @pm_runtime_get_sync(i32* %10)
  %12 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %13 = getelementptr inbounds %struct.platform_device, %struct.platform_device* %12, i32 0, i32 0
  %14 = call i32 @of_platform_depopulate(i32* %13)
  %15 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %16 = load %struct.stm32_adc_priv*, %struct.stm32_adc_priv** %4, align 8
  %17 = call i32 @stm32_adc_irq_remove(%struct.platform_device* %15, %struct.stm32_adc_priv* %16)
  %18 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %19 = getelementptr inbounds %struct.platform_device, %struct.platform_device* %18, i32 0, i32 0
  %20 = call i32 @stm32_adc_core_hw_stop(i32* %19)
  %21 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %22 = getelementptr inbounds %struct.platform_device, %struct.platform_device* %21, i32 0, i32 0
  %23 = call i32 @pm_runtime_disable(i32* %22)
  %24 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %25 = getelementptr inbounds %struct.platform_device, %struct.platform_device* %24, i32 0, i32 0
  %26 = call i32 @pm_runtime_set_suspended(i32* %25)
  %27 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %28 = getelementptr inbounds %struct.platform_device, %struct.platform_device* %27, i32 0, i32 0
  %29 = call i32 @pm_runtime_put_noidle(i32* %28)
  ret i32 0
}

declare dso_local %struct.stm32_adc_common* @platform_get_drvdata(%struct.platform_device*) #1

declare dso_local %struct.stm32_adc_priv* @to_stm32_adc_priv(%struct.stm32_adc_common*) #1

declare dso_local i32 @pm_runtime_get_sync(i32*) #1

declare dso_local i32 @of_platform_depopulate(i32*) #1

declare dso_local i32 @stm32_adc_irq_remove(%struct.platform_device*, %struct.stm32_adc_priv*) #1

declare dso_local i32 @stm32_adc_core_hw_stop(i32*) #1

declare dso_local i32 @pm_runtime_disable(i32*) #1

declare dso_local i32 @pm_runtime_set_suspended(i32*) #1

declare dso_local i32 @pm_runtime_put_noidle(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
